--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -9,7 +9,7 @@
 
 <CustomerWidgetComponent CountItemOnPage=@CountItemOnPage ></CustomerWidgetComponent>
 <hr/>
-<VendorWidgetComponent></VendorWidgetComponent>
+<VendorWidgetComponent  CountItemOnPage=@CountItemOnPage ></VendorWidgetComponent>
 
 @code {
 
