--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -29,7 +29,7 @@
                 {
                     <tr>
                         <td>@orderCustomer.OrderCustomerId</td>
-                        <td>@GetCustomerByIdUseCase.Execute(orderCustomer.OrderCustomerId).Company</td>
+                        <td>@GetCustomerByIdUseCase.Execute(orderCustomer.OrderCustomerId)?.Company</td>
                         <td>@orderCustomer.Edited</td>
                         <td>
                             @ViewItemOrdersUseCase.Execute().Where(x => x.OrderCustomerId == orderCustomer.OrderCustomerId).Count()
