--- a/WebApp/Pages/_Host.cshtml
+++ b/WebApp/Pages/_Host.cshtml
@@ -41,6 +41,10 @@ integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4
 
     <script src="_framework/blazor.server.js"></script>
 
-
+    <script>
+    function alertTooltip(tooltip) {
+                alert(tooltip);
+                }
+    </script>
 </body>
 </html>
