--- a/WebApp/Components/CustomerWidgetComponent.razor
+++ b/WebApp/Components/CustomerWidgetComponent.razor
@@ -265,7 +265,7 @@
     #endregion
 
     private string GetSelectedItemOrdersAsString()
-        => string.Join(",", miniItemOrder.selectedItemOrders);
+        => ""; // string.Join(",", miniItemOrder.selectedItemOrders);
 
 
     protected override void OnInitialized()
