--- a/WebApp/Components/CustomerWidgetComponent.razor
+++ b/WebApp/Components/CustomerWidgetComponent.razor
@@ -137,13 +137,9 @@
             </div>
         </div>
         <div class="col col-auto m-2 p-4 bg-light border widget-column-border">
-            <div class="widget-header">
-                <h4 class="mx-auto">
-                    <NavLink class="nav-link optix-widget-title" href="itemorders" style="float:left;">
-                        Товары в заказах ( @(CountItemOrdersOnPage < itemOrders.Count() ? $"{CountItemOrdersOnPage} из {itemOrders.Count()}" : itemOrders.Count()) )
-                    </NavLink>   
-                </h4>
-            </div>
+            <TitleWidgetWithCountComponent Text="Товары в заказах" Href="itemorders" 
+                CountItem=@CountItemOrdersOnPage FullCount=@itemOrders.Count()>
+            </TitleWidgetWithCountComponent>
             <div class="widget-content">
                 @if (itemOrders != null)
                 {
